# hft-order-book

./: CMakeLists.txt  JOURNEY.md  LICENSE  Makefile  README.md  README.md   build.sh  order_book_server  test_client
include/: byte_order.h  itch_protocol.h  network.h  orderbook.h  protocol.h  sequencer.h  spsc_queue.h
itch-reader/: itch_protocol.c  itch_protocol.h
journey/: day_1.md  day_15.md  my_engineering_journey.md
src/: main.c  network.c  network.h  order_entry.c  orderbook.c  send_test_packet.c  sequencer.c  spsc_queue.c
src/concurrent/: spsc_ring_buffer.c  spsc_ring_buffer.h
src/core/: order_book.c  order_book.h  transaction_log.c  transaction_log.h
src/platform/: analysis_simd.c  analysis_simd.h  cpu_dispatch.c  cpu_dispatch.h
src/util/: hptimer.h  memory_arena.c  memory_arena.h
tests/: client.c
